src/test/resources/private/typechecking/fail/main_structure/fail02_withMethods.jova
class Main {

  public int func() {
    return 0;
  }

  public int another_fun(){
	return 1;
  }

  public int another_fun(){
    return 1;
  }

  public int one_more_fun(int a){
    return 1;
  }
}